--- a/apps/split-window/src/app/app.component.html
+++ b/apps/split-window/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--<carousel-main [progress]="progress"></carousel-main>-->
-<div>Message: {{ hello$ | async | json }}</div>
+<!--<div>Message: {{ hello$ | async | json }}</div>-->
+<!--<display-grid [splitMode]="4" (onSelectedTemplate)="onSelectedTemplate($event)"></display-grid>-->
