--- a/apps/split-window/src/app/app.component.html
+++ b/apps/split-window/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--<carousel-main [progress]="progress"></carousel-main>-->
 <!--<div>Message: {{ hello$ | async | json }}</div>-->
 <!--<display-grid [splitMode]="4" (onSelectedTemplate)="onSelectedTemplate($event)"></display-grid>-->
+<home></home>
